fix spacing for all html pages

--- a/app/static/change_password_style.css
+++ b/app/static/change_password_style.css
@@ -1,3 +1,7 @@
+.main{
+    height : 100vh;
+}
+
 form {
     width : 70%;
 }
